--- a/QtDataGenerator/QtDataGenerator/qtdatagenerator.ui
+++ b/QtDataGenerator/QtDataGenerator/qtdatagenerator.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>715</width>
-    <height>582</height>
+    <width>735</width>
+    <height>701</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="btn_1">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>100</y>
+      <x>40</x>
+      <y>180</y>
       <width>161</width>
       <height>101</height>
      </rect>
@@ -30,11 +30,14 @@
    <widget class="QLabel" name="lbl_1">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>230</y>
-      <width>171</width>
-      <height>91</height>
+      <x>270</x>
+      <y>100</y>
+      <width>401</width>
+      <height>411</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
     </property>
     <property name="text">
      <string>Resting</string>
@@ -43,33 +46,13 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="CVImageWidget" name="imageWidget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>20</y>
-      <width>261</width>
-      <height>251</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QGraphicsView" name="pictureBox">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>320</y>
-      <width>256</width>
-      <height>192</height>
-     </rect>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>715</width>
+     <width>735</width>
      <height>21</height>
     </rect>
    </property>
@@ -85,14 +68,6 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>CVImageWidget</class>
-   <extends>QWidget</extends>
-   <header>cvimagewidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources>
   <include location="qtdatagenerator.qrc"/>
  </resources>
