--- a/QtDataGenerator/QtDataGenerator/qtdatagenerator.ui
+++ b/QtDataGenerator/QtDataGenerator/qtdatagenerator.ui
@@ -14,7 +14,10 @@
    <string>QtDataGenerator</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="btn_1">
+   <widget class="QPushButton" name="btn_next">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -24,7 +27,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Click Me</string>
+     <string>Next image</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_1">
@@ -82,7 +85,7 @@
      <x>0</x>
      <y>0</y>
      <width>735</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
