--- a/GridFace/GridFace/gridface.ui
+++ b/GridFace/GridFace/gridface.ui
@@ -14,17 +14,17 @@
    <string>GridFace</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="btn_run">
+   <widget class="QPushButton" name="btn_next_run">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>10</y>
-      <width>281</width>
-      <height>51</height>
+      <x>240</x>
+      <y>90</y>
+      <width>151</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>Calculate</string>
+     <string>Next run</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_msg">
@@ -47,19 +47,19 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>80</y>
-      <width>171</width>
-      <height>41</height>
+      <y>10</y>
+      <width>151</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>Browser</string>
+     <string>Run</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_train">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>480</x>
       <y>10</y>
       <width>131</width>
       <height>61</height>
@@ -72,8 +72,8 @@
    <widget class="QPushButton" name="btn_validate">
     <property name="geometry">
      <rect>
-      <x>24</x>
-      <y>82</y>
+      <x>30</x>
+      <y>10</y>
       <width>121</width>
       <height>71</height>
      </rect>
@@ -112,6 +112,22 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_next_validate">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>90</y>
+      <width>121</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Next validate</string>
     </property>
    </widget>
   </widget>
