--- a/GridFace/GridFace/gridface.ui
+++ b/GridFace/GridFace/gridface.ui
@@ -15,6 +15,9 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="btn_next_run">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>240</x>
@@ -85,9 +88,9 @@
    <widget class="QLabel" name="lbl_browser">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>70</y>
-      <width>161</width>
+      <x>50</x>
+      <y>320</y>
+      <width>531</width>
       <height>51</height>
      </rect>
     </property>
